# mis

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  readme.md
appointments/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
appointments/management/commands/: create_testdata.py
appointments/migrations/: 0001_initial.py
appointments/tests/: tests.py
mis/: asgi.py  settings.py  urls.py  wsgi.py
